--- a/TopEducation/src/main/resources/templates/mostrarPago.html
+++ b/TopEducation/src/main/resources/templates/mostrarPago.html
@@ -2,28 +2,41 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <title>Mostrar Pago</title>
+
+    <style>
+
+        h1 { /* Se centra titulo h1 */
+            text-align: center;
+        }
+
+        .table {
+            width: 100%;
+            border-collapse: collapse; /* Colapsar los bordes de la tabla */
+            border: 1px solid #ddd; /* Agregar un borde a la tabla */
+        }
+
+        .table th, .table td {
+            padding: 8px; /* Añadir espacio de relleno a las celdas */
+            border: 1px solid #ddd; /* Agregar un borde a las celdas */
+            text-align: center; /* Centrar el contenido de las celdas */
+        }
+
+        .table thead {
+            background-color: #f2f2f2; /* Color de fondo para la fila de encabezados */
+        }
+
+        .table tbody tr:nth-child(even) {
+            background-color: #f2f2f2; /* Color de fondo para filas pares */
+        }
+    </style>
+
 </head>
 <body>
 <div class="container">
 
-    <h1><b>Mostrando Pagos</b></h1>
-
-
-    <!--<form th:action="@{/mostrarCuota}" method="POST">
-        <h5>Seleccione un Estudiante:</h5>
-        <label>
-            <select name="id_estudiante" required>
-                <option value="">Selecciona un Estudiante</option>
-                <option th:each="student : ${students}" th:value="${student.id}">
-                    <span th:text="${student.nombreEstudiante + ' ' + student.apellidoEstudiante + ' '}"></span>
-                </option>
-            </select>
-        </label>
-        <input type="submit" value="Mostrar Cuotas">
-    </form>
-    <br>
-       -->
+    <h1><b>Cuotas</b></h1>
 
     <!-- Tabla para mostrar las cuotas del estudiante -->
     <table class="table">
@@ -48,17 +61,7 @@
             <td th:text="${cuota.getFecha_vencimiento()}"></td>
             <td th:text="${cuota.getFecha_pago()}"></td>
             <td th:text="${cuota.getPago().getTipo_pago()}"></td>
-            <td>
 
-                <!--
-                <form  th:action="@{/registrarCuota}" method="POST">
-                    <input type="hidden" name="cuota_id" th:value="${cuota.id}">
-                    <button type="submit" class="btn btn-primary">Pagar</button>
-                </form>
-                -->
-
-            </td>
-            </hr>
         </tr>
         </tbody>
     </table>
