--- a/TopEducation/src/main/resources/templates/cargarCSV.html
+++ b/TopEducation/src/main/resources/templates/cargarCSV.html
@@ -2,46 +2,40 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <title>Cargar Archivo</title>
 </head>
 <body>
 
 <!-- Mostrar mensaje de éxito si existe -->
-<div th:if="${mensaje}" class="alert alert-success">
+<div th:if="${mensaje}" class="alert alert-success" style="font-size: 1em; text-align: center;">
     <p th:text="${mensaje}"></p>
-</div>
-<!-- Mostrar mensaje de error si existe -->
-<div th:if="${error}" class="alert alert-danger">
-    <p th:text="${error}"></p>
 </div>
 
 <div class="container">
     <h1><b>Cargar el archivo de datos</b></h1>
     <form th:action="@{/cargarCSV}" method="POST" enctype="multipart/form-data">
-        <br>
-        <input type="file" class="form-control" name="file" accept = ".csv">
-        <br>
-        <input class = "btn btn-primary"
-               type="submit" value="Cargar el archivo a la Base de Datos">
+
+        <div style="background-color: #9aceff; padding: 10px;">
+            <input type="file" class="form-control mb-2" name="file" accept=".csv">
+            <br>
+            <div class="d-flex justify-content-between">
+                <input class="btn btn-primary" type="submit" value="Cargar el archivo a la Base de Datos">
+                <form th:action="@{/aplicarDescuentoPromedio}" method="POST">
+                    <button type="submit" class="btn btn-primary">Aplicar Puntaje</button>
+                </form>
+            </div>
+
+        </div>
+
     </form>
-    <br>
-
-    <form  th:action="@{/aplicarDescuentoPromedio}" method="POST">
-        <button type="submit" class="btn btn-primary">Aplicar Puntaje</button>
-    </form>
-
-
-    <!--<u><b> <h2 th:text="${mensaje}"></h2></b></u>-->
 </div>
+<br><br>
 
-<div class = "form1">
+<div class="text-center mt-3">
     <h5><b>Recuerde que debe cargar un archivo Excel de extensión .csv!</b></h5>
+    <h5><b>Solo presione 'Aplicar Puntaje' cuando haya ingresado todos los archivos.</b></h5>
 </div>
-
-<div class = "form2">
-    <h5><b>Solo preciones 'Aplicar Puntaje' cuando haya ingresado todos los excel</b></h5>
-</div>
-
 
 </body>
 </html>
