--- a/TopEducation/src/main/resources/templates/menu.html
+++ b/TopEducation/src/main/resources/templates/menu.html
@@ -2,17 +2,22 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <head>
-        <title>Página de Acciones</title>
+        <title>TopEducationWeb</title>
         <style>
+
+            /* Estilo para el contenido */
             body {
-                background-color: #b6f7fb; /* Cambiar el color de fondo de la página */
                 display: flex;
                 flex-direction: column;
                 align-items: center;
                 justify-content: center;
                 height: 100vh;
                 margin: 0;
+                background-color: transparent; /* Fondo transparente para el contenido principal */
+                position: relative; /* Establece posición relativa para el contenido */
+                z-index: 1; /* Coloca el contenido sobre el contenedor */
             }
 
             .title {
@@ -26,16 +31,17 @@
 
             .btn-container a {
                 display: block; /* Hacer que los botones sean elementos de bloque */
-                margin-bottom: 10px; /* Agregar espacio entre los botones */
+                margin-bottom: 10px;  /* Agregar espacio entre los botones */
             }
+
         </style>
     </head>
 <body>
 <div class="title">TopEducationWeb</div>
 <div class="btn-container">
-    <a class="btn-primary" href="http://localhost:8090/listaEstudiante" role="button">Mostrar Lista de Estudiantes</a>
-    <a class="btn-info" href="http://localhost:8090/generarReporte" role="button">Generar Reportes</a>
-    <a class="btn-secondary" href="http://localhost:8090/cargarCSV" role="button">Cargar CSV</a>
+    <a class="btn btn-primary btn-lg mb-2" href="http://localhost:8090/listaEstudiante" role="button">Mostrar Lista de Estudiantes</a>
+    <a class="btn btn-success btn-lg mb-2" href="http://localhost:8090/generarReporte" role="button">Generar Reportes</a>
+    <a class="btn btn-info btn-lg mb-2" href="http://localhost:8090/cargarCSV" role="button">Cargar CSV</a>
 </div>
 
 </body>
