cambio la ruta menu y elimino una réplica

--- a/topEducation/src/main/resources/templates/cargarCSV.html
+++ b/topEducation/src/main/resources/templates/cargarCSV.html
@@ -64,7 +64,7 @@
 </div>
 
 <br>
-<form action="/menu" method="get" class = "text-center">
+<form action="/" method="get" class = "text-center">
     <input class="btn btn-secondary text-center"  type="submit" value="Volver al menú principal">
 </form>
 
