--- a/topEducation/src/main/resources/templates/listaEstudiante.html
+++ b/topEducation/src/main/resources/templates/listaEstudiante.html
@@ -38,7 +38,7 @@
     <h1>Listado de Estudiantes</h1>
 
     <div class="d-flex justify-content-between">
-        <form action="/menu" method="get">
+        <form action="/" method="get">
             <input class="btn btn-secondary"  type="submit" value="Volver al menú principal">
         </form>
 
