--- a/topEducation/src/main/resources/templates/mostrarPago.html
+++ b/topEducation/src/main/resources/templates/mostrarPago.html
@@ -38,7 +38,7 @@
 
 <br>
 <div class="d-flex justify-content-center">
-    <form action="/menu" method="get" class="text-center">
+    <form action="/" method="get" class="text-center">
         <input class="btn btn-secondary mx-1" type="submit" value="Volver al menú principal">
     </form>
     <form action="/listaEstudiante" method="get" class="text-center">
