--- a/topEducation/src/main/resources/templates/mostrarReporte.html
+++ b/topEducation/src/main/resources/templates/mostrarReporte.html
@@ -6,6 +6,13 @@
     <title>Mostrar Reporte</title>
 </head>
 <body>
+<br>
+<form action="/" method="get" class="text-center">
+    <input class="btn btn-secondary mx-1" type="submit" value="Volver al menú principal">
+</form>
+<br>
+
+<hr>
 
 <div class="container mt-4">
     <h1 class="text-center">Reporte Estudiante</h1>
