--- a/topEducation/src/main/resources/templates/generarReporte.html
+++ b/topEducation/src/main/resources/templates/generarReporte.html
@@ -45,7 +45,7 @@
 </div>
 
 <br><br>
-<form action="/menu" method="get" class = "text-center">
+<form action="/" method="get" class = "text-center">
     <input class="btn btn-secondary text-center"  type="submit" value="Volver al menú principal">
 </form>
 
