--- a/topEducation/src/main/resources/templates/nuevoEstudiante.html
+++ b/topEducation/src/main/resources/templates/nuevoEstudiante.html
@@ -70,7 +70,7 @@
             </div>
 
             <div class="form-group">
-                <label for="fechaNacimiento"><strong>Fecha Nacimiento (YYYY/MM/DD)</strong></label>
+                <label for="fechaNacimiento"><strong>Fecha Nacimiento</strong></label>
                 <input type="date" class="form-control" id="fechaNacimiento" placeholder="Ingrese fecha de nacimiento" name="fechaNacimiento" required>
             </div>
 
