--- a/topEducation/src/main/resources/templates/menu.html
+++ b/topEducation/src/main/resources/templates/menu.html
@@ -37,7 +37,7 @@
 <body>
 
 <hr>
-<div class="title">TopEducationWeb</div>
+<div class="title">TopEducationWeb 2023</div>
 <div class="btn-container">
     <br>
     <form action="/listaEstudiante" method="get">
